--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -7,7 +7,7 @@ BBPATH .= ":${LAYERDIR}"
 # We have a recipes directory, add to BBFILES
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb ${LAYERDIR}/recipes-*/*/*.bbappend"
 
-BBFILE_COLLECTIONS += "meta-handheld"
+BBFILE_COLLECTIONS += "meta-ghackndev"
 BBFILE_PATTERN_meta-handheld := "^${LAYERDIR}/"
 
 # Define the priority for recipes (.bb files) from this layer,
