--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -1,6 +1,9 @@
 # Layer configuration for meta-handheld layer
 # Copyright 2011 Intel Corporation
 
+# palmOne Zire 72 layer configuration files
+# Copyright 2017-2018 CSG Systems
+
 # We have a conf and classes directory, append to BBPATH
 BBPATH .= ":${LAYERDIR}"
 
